Added article filtering endpoint
